# baseball-predict

./: .env.example  .gitignore  collect_mlb_stats.py  docker-compose.yml  manual_lineup.py  upload_stats.py
backend/: Dockerfile  alembic.ini  pyproject.toml  run_backfill.py  run_predict.py  statiz_login_page.html  test_kbo_pitcher_source.py  test_kbo_stats.py  test_statiz_login.py  train_score_only.py  upload_stats.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_starter_names.py  003_add_lineup_columns.py  004_add_score_prediction.py  005_add_kbo_season_stats.py  006_add_kbo_bullpen_stats.py  007_add_pitcher_handedness_and_splits.py  008_add_recent_pitcher_stats_and_park_factor.py  009_add_mlb_stats.py  010_add_mlb_pitcher_advanced_cols.py  011_add_npb_stats.py  012_add_kbo_player_stats.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/collectors/: base_collector.py  kbo_collector.py  (+8 more)
backend/ml_models/: cat-kbo-v20260327.cbm  cat-kbo-v20260403.cbm  lgb-kbo-v20260327.txt  lgb-kbo-v20260331.txt  lgb-kbo-v20260403.txt  meta-kbo-v20260327.pkl  meta-kbo-v20260331.pkl  meta-kbo-v20260403.pkl  model_metadata.json  model_metadata_cat_kbo.json  model_metadata_kbo.json  model_metadata_lgb_kbo.json  model_metadata_meta_kbo.json  model_metadata_score_kbo.json  score_away-kbo-v20260331.ubj  score_away-kbo-v20260403.ubj  score_home-kbo-v20260331.ubj  score_home-kbo-v20260403.ubj  xgb-kbo-v20260326.ubj  xgb-kbo-v20260327.ubj  xgb-kbo-v20260331.ubj  xgb-kbo-v20260403.ubj  xgb-v20260326.ubj
(+873 files in other folders)
